--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Learning bootstrap</title>
 </head>
 <body>
+    <a href="leht.html">Link lehele</a>
     <h1>Learning bootstrap</h1>
     <h2>Heading 2</h2>
     <h3>Heading 3</h3>
