--- a/leht.html
+++ b/leht.html
@@ -137,6 +137,7 @@
           <img src="/assets/kindle.png" class="img-fluid" alt="ebook">
         </div>
 
+        <div class="col-lg-6">
         <!--accordion-->
         <div class="accordion" id="chapters">
           <div class="accordion-item">
@@ -211,7 +212,7 @@
   </div>
 </section>
 
-<!-- reviews list -->
+<!--book reviews-->
 <section id="reviews" class="bg-light">
   <div class="container-lg">
     <div class="text-center">
@@ -289,6 +290,8 @@
 </section>
 
 <!-- contact form -->
+<!-- form-control, form-label, form-select, input-group, input-group-text -->
+
 
 
 
