--- a/leht.html
+++ b/leht.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-<!--navbar-->
+  <!-- navbar -->
   <nav class="navbar navbar-expand-md navbar-light pt-5 pb-4">
     <div class="container-xxl">
       <!-- navbar brand / title -->
@@ -50,7 +50,7 @@
       </div>
     </div>
   </nav>
-    <!--main image & intro text-->
+    <!-- main image & intro text -->
     <section id="intro">
         <div class="container-lg">
             <div class="row justify-content-center align-items-center">
@@ -63,13 +63,16 @@
                     <a href="#pricing" class="btn btn-warning btn-lg">Buy Now</a>
                 </div>
                 <div class="col-md-5 text-center d-none d-md-block">
+                  <!-- tooltip -->
+                   <span class="tt" data-bs-placement="bottom" title="Net Ninja Book Cover">
                     <img class="img-fluid" src="/assets/ebook-cover.png" alt="ebook cover">
+                   </span>
                 </div>
             </div>
         </div>
     </section>
 
-    <!--pricing plans-->
+    <!-- pricing plans -->
     <section id="pricing" class="bg-light mt-5">
     <div class="container-lg">
       <div class="text-center">
@@ -291,13 +294,112 @@
 
 <!-- contact form -->
 <!-- form-control, form-label, form-select, input-group, input-group-text -->
+<section id="contact">
+  <div class="container-lg">
+    
+    <div class="text-center">
+      <h2>Get in Touch</h2>
+      <p class="lead">Questions to ask? Fill out the form to contact me directly...</p>
+    </div>
+    <div class="row justify-content-center my-5">
+      <div class="col-lg-6">
+        
+        <form>
+          <label for="email" class="form-label">Email address:</label>
+          <div class="input-group mb-4">
+            <span class="input-group-text">
+              <i class="bi bi-envelope-fill text-secondary"></i>
+            </span>
+            <input type="text" id="email" class="form-control" placeholder="e.g. mario@example.com" />
+            <!-- tooltip -->
+            <span class="input-group-text">
+              <span class="tt" data-bs-placement="bottom" title="Enter an email address we can reply to">
+                <i class="bi bi-question-circle text-muted"></i>
+              </span>
+            </span>
+          </div>
+          <label for="name" class="form-label">Name:</label>
+          <div class="mb-4 input-group">
+            <span class="input-group-text">
+              <i class="bi bi-person-fill text-secondary"></i>
+            </span>
+            <input type="text" id="name" class="form-control" placeholder="e.g. Mario" />
+            <!-- tooltip -->
+            <span class="input-group-text">
+              <span class="tt" data-bs-placement="bottom" title="Write your first name">
+                <i class="bi bi-question-circle text-muted"></i>
+              </span>
+            </span>
+          </div>
+          <label for="subject" class="form-label">What is your question about?</label>
+          <div class="mb-4 input-group">
+            <span class="input-group-text">
+              <i class="bi bi-chat-right-dots-fill text-secondary"></i>
+            </span>
+            <select class="form-select" id="subject">
+              <option value="pricing" selected>Pricing query</option>
+              <option value="content">Content query</option>
+              <option value="other">Other query</option>
+            </select>
+          </div>
+          <div class="mb-4 mt-5 form-floating">
+            <textarea class="form-control" id="query" style="height: 140px" placeholder="query"></textarea>
+            <label for="query">Your query...</label>
+          </div>
+          <div class="mb-4 text-center">
+            <button type="submit" class="btn btn-secondary">Submit</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</section>
 
+ <!-- get updates / modal trigger -->
+  <section class="bg-light">
+    <div class="container">
+      <div class="text-center">
+        <h2>Stay in The Loop</h2>
+        <p class="lead">Get the latest updates as they happen...</p>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-8 text-center">
+          <p class="text-muted my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero exercitationem voluptatibus porro, hic asperiores fuga illo voluptates obcaecati deleniti veritatis sunt saepe quasi deserunt ex ipsum. Est possimus, aspernatur, vitae eligendi rem odit quaerat, ipsum pariatur ratione maxime delectus fuga minus accusamus dolores iusto maiores accusantium cumque magnam placeat quia!</p>
+          <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#reg-modal">
+            Register for Updates
+          </button>
+        </div>
+      </div>
+    </div>
+  </section>
 
-
-
-
+  <!-- modal itself -->
+  <div class="modal fade" id="reg-modal" tabindex="-1" aria-labelledby="modal-title" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modal-title">Get the Latest Updates</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, exercitationem laboriosam nihil minus voluptatibus harum aliquam consequatur pariatur inventore dignissimos illum excepturi ratione ipsum sit iusto alias eligendi fugit laborum?</p>
+          <label for="modal-email" class="form-label">Your email address:</label>
+          <input type="text" class="form-control" id="modal-email" placeholder="e.g. mario@example.com">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary">Submit</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script>
+  const tooltips = document.querySelectorAll('.tt')
+  tooltips.forEach(t => {
+    new bootstrap.Tooltip(t)
+  })
+</script>
 </body>
 </html>
