--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <a href="leht.html">Link lehele</a>
-    <h1>Learning bootstrap</h1>
+    <h1>Bootstrapi õppimine</h1>
     <h2>Heading 2</h2>
     <h3>Heading 3</h3>
     <h2 class="h3">h2 tag with the h3 class</h2>
