Stiilide paranduse katsetus

--- a/leht.html
+++ b/leht.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/css/main.min.css" rel="stylesheet">
+    <link href="css/main.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Disainikoolitus</title>
     <style>
@@ -69,7 +69,7 @@
                 <div class="col-md-5 text-center d-none d-md-block">
                   <!-- tooltip -->
                    <span class="tt" data-bs-placement="bottom" title="Illustratsioon">
-                    <img class="img-fluid" src="/assets/illustratsioon_avaleht.png" alt="illustratsioon arvuti taga istuvast tüdrukust">
+                    <img class="img-fluid" src="assets/illustratsioon_avaleht.png" alt="illustratsioon arvuti taga istuvast tüdrukust">
                    </span>
                 </div>
             </div>
@@ -141,7 +141,7 @@
       </div>
       <div class="row my-5 g-5 justify-content-around align-items-center">
         <div class="col-6 col-lg-4">
-          <img src="/assets/illustratsioon_02.png" class="img-fluid" alt="illustratsioon kosmoseelementidega">
+          <img src="assets/illustratsioon_02.png" class="img-fluid" alt="illustratsioon kosmoseelementidega">
         </div>
 
         <div class="col-lg-6">
