--- a/leht.html
+++ b/leht.html
@@ -19,7 +19,7 @@
     <div class="container-xxl">
       <!-- navbar brand / title -->
       <a class="navbar-brand" href="#intro">
-        <img src="/assets/logo_ev.png" alt="logo" width="70" class="d-inline-block align-text-center">
+        <img src="assets/logo_ev.png" alt="logo" width="70" class="d-inline-block align-text-center">
       </a>
 
       <!-- toggle button for mobile nav -->
